--- a/Spam_detection.ipynb
+++ b/Spam_detection.ipynb
@@ -131,10 +131,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\santj\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Data cleaning and preprocessing\n",
+    "import re\n",
+    "import nltk\n",
+    "nltk.download('stopwords')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem.porter import PorterStemmer\n",
+    "ps = PorterStemmer()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "corpus = []\n",
+    "for i in range(0, len(messages)):\n",
+    "    review = re.sub('[^a-zA-Z]', ' ', messages['message'][i])\n",
+    "    review = review.lower()\n",
+    "    review = review.split()\n",
+    "    \n",
+    "    review = [ps.stem(word) for word in review if not word in stopwords.words('english')]\n",
+    "    review = ' '.join(review)\n",
+    "    corpus.append(review)"
+   ]
   }
  ],
  "metadata": {
