--- a/Spam_detection.ipynb
+++ b/Spam_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "[5572 rows x 2 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,19 +174,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "corpus = []\n",
     "for i in range(0, len(messages)):\n",
-    "    review = re.sub('[^a-zA-Z]', ' ', messages['message'][i])\n",
+    "    review = re.sub('[^a-zA-Z0-9]', ' ', messages['message'][i])\n",
+    "    # Substitutes anythis with an empty space Which is no\n",
     "    review = review.lower()\n",
     "    review = review.split()\n",
     "    \n",
     "    review = [ps.stem(word) for word in review if not word in stopwords.words('english')]\n",
+    "    # Ignore all the stop words \n",
     "    review = ' '.join(review)\n",
     "    corpus.append(review)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "cv = CountVectorizer(max_features=2500,binary=True)\n",
+    "X = cv.fit_transform(corpus).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y=pd.get_dummies(messages['label'])\n",
+    "y=y.iloc[:,1].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20, random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "spam_detect_model = MultinomialNB().fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#prediction\n",
+    "y_pred=spam_detect_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9865470852017937\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score,classification_report\n",
+    "\n",
+    "score=accuracy_score(y_test,y_pred)\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.99      0.99      0.99       960\n",
+      "        True       0.94      0.97      0.95       155\n",
+      "\n",
+      "    accuracy                           0.99      1115\n",
+      "   macro avg       0.97      0.98      0.97      1115\n",
+      "weighted avg       0.99      0.99      0.99      1115\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "print(classification_report(y_pred,y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Using TFI-DF\n",
+    "<h3>-It gives more weight to less occuring words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating the TFIDF model\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "tv = TfidfVectorizer(max_features=2500)\n",
+    "X = tv.fit_transform(corpus).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train Test Split\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20, random_state = 0)\n",
+    "\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "spam_detect_model = MultinomialNB().fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9847533632286996\n"
+     ]
+    }
+   ],
+   "source": [
+    "#prediction\n",
+    "y_pred=spam_detect_model.predict(X_test)\n",
+    "score=accuracy_score(y_test,y_pred)\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       1.00      0.98      0.99       972\n",
+      "        True       0.89      1.00      0.94       143\n",
+      "\n",
+      "    accuracy                           0.98      1115\n",
+      "   macro avg       0.95      0.99      0.97      1115\n",
+      "weighted avg       0.99      0.98      0.99      1115\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "print(classification_report(y_pred,y_test))"
    ]
   }
  ],
