--- a/Spam_detection.ipynb
+++ b/Spam_detection.ipynb
@@ -378,6 +378,22 @@
     "from sklearn.metrics import classification_report\n",
     "print(classification_report(y_pred,y_test))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install gensim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
