--- a/Spam_detection.ipynb
+++ b/Spam_detection.ipynb
@@ -302,17 +302,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Using TFI-DF\n",
-    "<h3>-It gives more weight to less occuring words"
+    "<h3>Using TFI-DF\n",
+    "<h4>-It gives more weight to most occuring words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating the TFIDF model\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "tv = TfidfVectorizer(max_features=2500)\n",
     "X = tv.fit_transform(corpus).toarray()"
@@ -390,10 +389,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from nltk.stem import WordNetLemmatizer\n",
+    "lemmatizer=WordNetLemmatizer()\n",
+    "corpus = []\n",
+    "for i in range(0, len(messages)):\n",
+    "    review = re.sub('[^a-zA-Z]', ' ', messages['message'][i])\n",
+    "    review = review.lower()\n",
+    "    review = review.split()\n",
+    "    \n",
+    "    review = [lemmatizer.lemmatize(word) for word in review if not word in stopwords('english')]\n",
+    "    review = ' '.join(review)\n",
+    "    corpus.append(review)\n",
+    "from nltk import sent_tokenize\n",
+    "from gensim.utils import simple_preprocess"
+   ]
   }
  ],
  "metadata": {
