--- a/Spam_detection.ipynb
+++ b/Spam_detection.ipynb
@@ -456,6 +456,32 @@
     "        words.append(simple_preprocess(sent))\n",
     "words"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[==================================================] 100.0% 1662.8/1662.8MB downloaded\n"
+     ]
+    }
+   ],
+   "source": [
+    "import gensim.downloader as api\n",
+    "\n",
+    "wv = api.load('word2vec-google-news-300')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
