--- a/Word_Embeddings.ipynb
+++ b/Word_Embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sent=[  'the glass of milk',\n",
+    "     'the glass of juice',\n",
+    "     'the cup of tea',\n",
+    "    'I am a good boy',\n",
+    "     'I am a good developer',\n",
+    "     'understand the meaning of words',\n",
+    "     'your videos are good']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Vocabulary size\n",
+    "voc_size=500"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[464, 113, 128, 291], [464, 113, 128, 310], [464, 275, 128, 151], [122, 153, 193, 104, 343], [122, 153, 193, 104, 339], [87, 464, 350, 128, 280], [308, 255, 375, 104]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "onehot_repr=[one_hot(words,voc_size) for words in sent] \n",
+    "# This means convert ever word into the voc =bulary size in the list sentences\n",
+    "print(onehot_repr)      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.layers import Embedding\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.models import Sequential"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  0   0   0   0 464 113 128 291]\n",
+      " [  0   0   0   0 464 113 128 310]\n",
+      " [  0   0   0   0 464 275 128 151]\n",
+      " [  0   0   0 122 153 193 104 343]\n",
+      " [  0   0   0 122 153 193 104 339]\n",
+      " [  0   0   0  87 464 350 128 280]\n",
+      " [  0   0   0   0 308 255 375 104]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## pre padding\n",
+    "sent_length=8\n",
+    "embedded_docs=pad_sequences(onehot_repr,padding='pre',maxlen=sent_length)\n",
+    "print(embedded_docs)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## 10 feature dimesnions\n",
+    "dim=10\n"
+   ]
   }
  ],
  "metadata": {
