--- a/Spam_detection.ipynb
+++ b/Spam_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -68,70 +68,38 @@
        "      <td>ham</td>\n",
        "      <td>Nah I don't think he goes to usf, he lives aro...</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5567</th>\n",
-       "      <td>spam</td>\n",
-       "      <td>This is the 2nd time we have tried 2 contact u...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5568</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>Will ü b going to esplanade fr home?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5569</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>Pity, * was in mood for that. So...any other s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5570</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>The guy did some bitching but I acted like i'd...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5571</th>\n",
-       "      <td>ham</td>\n",
-       "      <td>Rofl. Its true to its name</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5572 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     label                                            message\n",
-       "0      ham  Go until jurong point, crazy.. Available only ...\n",
-       "1      ham                      Ok lar... Joking wif u oni...\n",
-       "2     spam  Free entry in 2 a wkly comp to win FA Cup fina...\n",
-       "3      ham  U dun say so early hor... U c already then say...\n",
-       "4      ham  Nah I don't think he goes to usf, he lives aro...\n",
-       "...    ...                                                ...\n",
-       "5567  spam  This is the 2nd time we have tried 2 contact u...\n",
-       "5568   ham               Will ü b going to esplanade fr home?\n",
-       "5569   ham  Pity, * was in mood for that. So...any other s...\n",
-       "5570   ham  The guy did some bitching but I acted like i'd...\n",
-       "5571   ham                         Rofl. Its true to its name\n",
-       "\n",
-       "[5572 rows x 2 columns]"
+       "  label                                            message\n",
+       "0   ham  Go until jurong point, crazy.. Available only ...\n",
+       "1   ham                      Ok lar... Joking wif u oni...\n",
+       "2  spam  Free entry in 2 a wkly comp to win FA Cup fina...\n",
+       "3   ham  U dun say so early hor... U c already then say...\n",
+       "4   ham  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "messages"
+    "messages.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Text Cleaning and Pre-processing "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -149,13 +117,12 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Data cleaning and preprocessing\n",
     "import re\n",
     "import nltk\n",
     "nltk.download('stopwords')"
@@ -163,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +155,8 @@
     "    review = [ps.stem(word) for word in review if not word in stopwords.words('english')]\n",
     "    # Ignore all the stop words \n",
     "    review = ' '.join(review)\n",
-    "    corpus.append(review)"
+    "    corpus.append(review)\n",
+    "    # Join the words into respective sentences and add them into the corpus "
    ]
   },
   {
@@ -197,12 +165,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpus "
+    "corpus= []\n",
+    "for i in range(0,len(messages)):\n",
+    "    review = re.sub('[^a-zA-Z0-9]',' ',['message'][i])\n",
+    "\n",
+    "    review.lower()\n",
+    "    review.split()\n",
+    "\n",
+    "    review = [ps.stem(word) for word in review if word not in stopwords.words('english')]\n",
+    "\n",
+    "    review "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ok lar joke wif u oni',\n",
+       " 'free entri 2 wkli comp win fa cup final tkt 21st may 2005 text fa 87121 receiv entri question std txt rate c appli 08452810075over18',\n",
+       " 'u dun say earli hor u c alreadi say',\n",
+       " 'nah think goe usf live around though',\n",
+       " 'freemsg hey darl 3 week word back like fun still tb ok xxx std chg send 1 50 rcv',\n",
+       " 'even brother like speak treat like aid patent',\n",
+       " 'per request mell mell oru minnaminungint nurungu vettam set callertun caller press 9 copi friend callertun',\n",
+       " 'winner valu network custom select receivea 900 prize reward claim call 09061701461 claim code kl341 valid 12 hour',\n",
+       " 'mobil 11 month u r entitl updat latest colour mobil camera free call mobil updat co free 08002986030']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corpus[1:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,28 +218,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "y=pd.get_dummies(messages['label'])\n",
-    "y=y.iloc[:,1].values"
+    "y=y.iloc[:,1].values\n",
+    "# Making dummies of the labes and only selecting one column for labelling "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20, random_state = 0)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20, random_state = 42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -303,12 +308,15 @@
    "metadata": {},
    "source": [
     "<h3>Using TFI-DF\n",
-    "<h4>-It gives more weight to most occuring words"
+    "<h4>It gives more weight to most occuring words\n",
+    "<h5>-Max features is only used to select top 'n' most occuring words\n",
+    "<h5>-binary=true means you only want presence of words not its frequency in a sentence and it also helps in reduceing dimensions \n",
+    "<h5>-binary= False means you also want the frequency of the words in each sentence to get more accurate results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,12 +327,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train Test Split\n",
-    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20, random_state = 0)\n",
     "\n",
@@ -334,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -380,28 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: gensim in c:\\python311\\lib\\site-packages (4.3.2)\n",
-      "Requirement already satisfied: numpy>=1.18.5 in c:\\python311\\lib\\site-packages (from gensim) (1.24.2)\n",
-      "Requirement already satisfied: scipy>=1.7.0 in c:\\python311\\lib\\site-packages (from gensim) (1.11.2)\n",
-      "Requirement already satisfied: smart-open>=1.8.1 in c:\\python311\\lib\\site-packages (from gensim) (6.4.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install gensim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,67 +398,98 @@
     "    review = review.lower()\n",
     "    review = review.split()\n",
     "    \n",
-    "    review = [lemmatizer.lemmatize(word) for word in review if not word in stopwords('english')]\n",
-    "    review = ' '.join(review)\n",
-    "    corpus.append(review)\n",
-    "from nltk import sent_tokenize\n",
-    "from gensim.utils import simple_preprocess"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nltk.stem import WordNetLemmatizer\n",
-    "lemmatizer=WordNetLemmatizer()\n",
-    "corpus = []\n",
-    "for i in range(0, len(messages)):\n",
-    "    review = re.sub('[^a-zA-Z]', ' ', messages['message'][i])\n",
-    "    review = review.lower()\n",
-    "    review = review.split()\n",
-    "    \n",
-    "    review = [lemmatizer.lemmatize(word) for word in review if not word in stopwords.words('english')]\n",
+    "    review = [lemmatizer.lemmatize(word) for word in review if word not in stopwords.words('english')]\n",
     "    review = ' '.join(review)\n",
     "    corpus.append(review)\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-> gensim is a library for topic modeling and document similarity analysis. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-> simple_preprocess is a function from gensim used for tokenizing a document into a list of lowercase tokens."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-> In tokenize you get the meaning of the sentence because the sentence is divided in such a way that their sequence makes sense"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sentences = sent_tokenize(text)  # [\"I love programming.\", \"Do you?\"]\n",
+    "\n",
+    "tokenized_words = [simple_preprocess(sentence) for sentence in sentences]\n",
+    "\n",
+    "[['i', 'love', 'programming'], ['do', 'you']]"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "from nltk import sent_tokenize\n",
     "from gensim.utils import simple_preprocess\n",
-    "corpus[0]\n",
     "\n",
     "words=[]\n",
     "for sent in corpus:\n",
     "    sent_token=sent_tokenize(sent)\n",
     "    for sent in sent_token:\n",
     "        words.append(simple_preprocess(sent))\n",
-    "words"
+    "corpus = [' '.join(sentence) for sentence in words]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = tv.fit_transform(corpus).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20, random_state = 0)\n",
+    "\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "spam_detect_model = MultinomialNB().fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[==================================================] 100.0% 1662.8/1662.8MB downloaded\n"
+      "0.9847533632286996\n"
      ]
     }
    ],
    "source": [
-    "import gensim.downloader as api\n",
-    "\n",
-    "wv = api.load('word2vec-google-news-300')"
+    "y_pred=spam_detect_model.predict(X_test)\n",
+    "score=accuracy_score(y_test,y_pred)\n",
+    "print(score)"
    ]
   },
   {
