--- a/Word_Embeddings.ipynb
+++ b/Word_Embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[122, 156, 407, 375], [122, 156, 407, 355], [122, 384, 407, 131], [200, 113, 248, 276, 373], [200, 113, 248, 276, 273], [384, 122, 195, 407, 474], [390, 132, 462, 276]]\n"
+      "[[331, 227, 115, 334], [331, 227, 115, 371], [331, 223, 115, 149], [462, 250, 239, 127, 392], [462, 250, 239, 127, 6], [281, 331, 470, 115, 234], [157, 56, 261, 127]]\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,20 +101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  0   0   0   0 122 156 407 375]\n",
-      " [  0   0   0   0 122 156 407 355]\n",
-      " [  0   0   0   0 122 384 407 131]\n",
-      " [  0   0   0 200 113 248 276 373]\n",
-      " [  0   0   0 200 113 248 276 273]\n",
-      " [  0   0   0 384 122 195 407 474]\n",
-      " [  0   0   0   0 390 132 462 276]]\n"
+      "[[  0   0   0   0 331 227 115 334]\n",
+      " [  0   0   0   0 331 227 115 371]\n",
+      " [  0   0   0   0 331 223 115 149]\n",
+      " [  0   0   0 462 250 239 127 392]\n",
+      " [  0   0   0 462 250 239 127   6]\n",
+      " [  0   0   0 281 331 470 115 234]\n",
+      " [  0   0   0   0 157  56 261 127]]\n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " embedding (Embedding)       (None, 8, 10)             5000      \n",
+      " embedding_1 (Embedding)     (None, 8, 10)             5000      \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 5000 (19.53 KB)\n",
@@ -176,39 +176,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 241ms/step\n"
+      "1/1 [==============================] - 0s 69ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[-0.01959975,  0.04320956, -0.01745384,  0.02387864,  0.00182556,\n",
-       "        -0.0195815 , -0.02523458, -0.01730455,  0.01000396,  0.03102596],\n",
-       "       [-0.01959975,  0.04320956, -0.01745384,  0.02387864,  0.00182556,\n",
-       "        -0.0195815 , -0.02523458, -0.01730455,  0.01000396,  0.03102596],\n",
-       "       [-0.01959975,  0.04320956, -0.01745384,  0.02387864,  0.00182556,\n",
-       "        -0.0195815 , -0.02523458, -0.01730455,  0.01000396,  0.03102596],\n",
-       "       [-0.01959975,  0.04320956, -0.01745384,  0.02387864,  0.00182556,\n",
-       "        -0.0195815 , -0.02523458, -0.01730455,  0.01000396,  0.03102596],\n",
-       "       [-0.01495215, -0.02277734,  0.0267272 , -0.02839311,  0.00587813,\n",
-       "        -0.00629707,  0.02879622,  0.02426207,  0.01792837,  0.04449237],\n",
-       "       [ 0.03708472,  0.01626802,  0.03649267, -0.04434643, -0.00225797,\n",
-       "        -0.03882967, -0.0119549 , -0.00034777, -0.04284225, -0.02714298],\n",
-       "       [-0.03497501, -0.04269165, -0.0306077 , -0.04832708,  0.03537735,\n",
-       "        -0.03582592,  0.02543852,  0.0354864 ,  0.01051297,  0.02916663],\n",
-       "       [ 0.00307452, -0.01775594,  0.03380981,  0.04068496,  0.03805834,\n",
-       "         0.02497998,  0.04289067,  0.03795106, -0.00946878,  0.02417416]],\n",
+       "array([[-0.00329955, -0.01746704,  0.04325211,  0.04216815, -0.01387668,\n",
+       "        -0.00745512,  0.0273121 ,  0.02661324, -0.00896993, -0.01448248],\n",
+       "       [-0.00329955, -0.01746704,  0.04325211,  0.04216815, -0.01387668,\n",
+       "        -0.00745512,  0.0273121 ,  0.02661324, -0.00896993, -0.01448248],\n",
+       "       [-0.00329955, -0.01746704,  0.04325211,  0.04216815, -0.01387668,\n",
+       "        -0.00745512,  0.0273121 ,  0.02661324, -0.00896993, -0.01448248],\n",
+       "       [-0.00329955, -0.01746704,  0.04325211,  0.04216815, -0.01387668,\n",
+       "        -0.00745512,  0.0273121 ,  0.02661324, -0.00896993, -0.01448248],\n",
+       "       [-0.00650359,  0.01464744, -0.01151357,  0.03610105,  0.00290599,\n",
+       "        -0.01979535,  0.00420054,  0.03637863,  0.0370076 ,  0.03646285],\n",
+       "       [-0.04832684, -0.01159501,  0.04414817,  0.01672225,  0.00789487,\n",
+       "        -0.04383813, -0.04101064, -0.04961465, -0.02359298,  0.0209255 ],\n",
+       "       [-0.01906289,  0.02909409, -0.02876822, -0.00975039, -0.03107313,\n",
+       "        -0.03975691, -0.03243393, -0.00101523, -0.03353322,  0.00046428],\n",
+       "       [-0.03402957, -0.02362052, -0.04053323,  0.03261372, -0.01740384,\n",
+       "        -0.03324772,  0.03970278,  0.00373808,  0.0326172 , -0.00182427]],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,30 +219,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 51ms/step\n",
-      "[[-0.01959975  0.04320956 -0.01745384  0.02387864  0.00182556 -0.0195815\n",
-      "  -0.02523458 -0.01730455  0.01000396  0.03102596]\n",
-      " [-0.01959975  0.04320956 -0.01745384  0.02387864  0.00182556 -0.0195815\n",
-      "  -0.02523458 -0.01730455  0.01000396  0.03102596]\n",
-      " [-0.01959975  0.04320956 -0.01745384  0.02387864  0.00182556 -0.0195815\n",
-      "  -0.02523458 -0.01730455  0.01000396  0.03102596]\n",
-      " [-0.01959975  0.04320956 -0.01745384  0.02387864  0.00182556 -0.0195815\n",
-      "  -0.02523458 -0.01730455  0.01000396  0.03102596]\n",
-      " [-0.01495215 -0.02277734  0.0267272  -0.02839311  0.00587813 -0.00629707\n",
-      "   0.02879622  0.02426207  0.01792837  0.04449237]\n",
-      " [ 0.03708472  0.01626802  0.03649267 -0.04434643 -0.00225797 -0.03882967\n",
-      "  -0.0119549  -0.00034777 -0.04284225 -0.02714298]\n",
-      " [-0.03497501 -0.04269165 -0.0306077  -0.04832708  0.03537735 -0.03582592\n",
-      "   0.02543852  0.0354864   0.01051297  0.02916663]\n",
-      " [ 0.00307452 -0.01775594  0.03380981  0.04068496  0.03805834  0.02497998\n",
-      "   0.04289067  0.03795106 -0.00946878  0.02417416]]\n"
+      "1/1 [==============================] - 0s 93ms/step\n",
+      "[[-0.00329955 -0.01746704  0.04325211  0.04216815 -0.01387668 -0.00745512\n",
+      "   0.0273121   0.02661324 -0.00896993 -0.01448248]\n",
+      " [-0.00329955 -0.01746704  0.04325211  0.04216815 -0.01387668 -0.00745512\n",
+      "   0.0273121   0.02661324 -0.00896993 -0.01448248]\n",
+      " [-0.00329955 -0.01746704  0.04325211  0.04216815 -0.01387668 -0.00745512\n",
+      "   0.0273121   0.02661324 -0.00896993 -0.01448248]\n",
+      " [-0.00329955 -0.01746704  0.04325211  0.04216815 -0.01387668 -0.00745512\n",
+      "   0.0273121   0.02661324 -0.00896993 -0.01448248]\n",
+      " [-0.00650359  0.01464744 -0.01151357  0.03610105  0.00290599 -0.01979535\n",
+      "   0.00420054  0.03637863  0.0370076   0.03646285]\n",
+      " [-0.04832684 -0.01159501  0.04414817  0.01672225  0.00789487 -0.04383813\n",
+      "  -0.04101064 -0.04961465 -0.02359298  0.0209255 ]\n",
+      " [-0.01906289  0.02909409 -0.02876822 -0.00975039 -0.03107313 -0.03975691\n",
+      "  -0.03243393 -0.00101523 -0.03353322  0.00046428]\n",
+      " [-0.03402957 -0.02362052 -0.04053323  0.03261372 -0.01740384 -0.03324772\n",
+      "   0.03970278  0.00373808  0.0326172  -0.00182427]]\n"
      ]
     }
    ],
